Revision history for Perl extension Crypt::OpenSSL::RSA.

0.29  Wed Apr 4 2018 - Moritz Onken (PERLER)
        - Adapt to OpenSSL 1.1.0 (dur-randir)

0.28  Thu Aug 25 2011 - Moritz Onken (PERLER)
        - RT 56454 - Win32 compatibility patch (kmx@cpan.org)

0.27  Wed Jun 29 2011 - Todd Rinaldo (TODDR)
        - RT 65947 - Fix RSA.pm break with perl 5.14+

0.26  Sun Nov 22 2009 11:01:13
        - Change subclassing test to generate a 512 bit key in order to work
          around an odd issue seen on some 64-bit redhat systems. (CPAN bug 45498)

0.25  Sun May 20 2007 12:56:11
        - Add a LICENSE file.
        - Fix a bug (reported by many) in rsa.t - we were incorrectly counting
          the number of tests in situations where use_sha512_hash was
          not available.

0.24  Mon Nov 13 2006 08:21:14
        - Fix a bug reported by Mark Martinec <Mark.Martinec@ijs.si>
          where encrypt could segfault if called with insufficient
          data; it now informatively croaks instead.
        - Fix a bug reported by Mark Martinec where check_key would
          segfault instead of croaking when called on a public key.
        - Fix decrypt and private_encrypt to croak instead of segfault when
          called on a public key.
        - Add an is_private method.
        - Silence a few compiler warnings about ignoring return values
          from certain BIO_* methods.

0.23  Wed Apr 12 2006 00:06:10
        - Provide 32 bytes of seeding in tests, up from 19.
        - Stop relying on implicit includes, which disappeared in the 0.98
          release of OpenSSL.
        - Apply patch from Jim Radford <radford@blackbean.org> to add support
          for SHA{224,256,384,512}

0.22  Mon Nov 15 2005 21:13:20
        - Add public_decrypt, private_encrypt methods, contributed
          by Paul G. Weiss <paul@weiss.name>
        - Some changes to help builds on Redhat9
        - Remove deprecated methods: