@@ -2,6 +2,7 @@ Revision history for Perl extension Crypt::OpenSSL::RSA.
 
 0.29  Wed Apr 4 2018 - Moritz Onken (PERLER)
         - Adapt to OpenSSL 1.1.0 (dur-randir)
+        - Move issue tracker to github.
 
 0.28  Thu Aug 25 2011 - Moritz Onken (PERLER)
         - RT 56454 - Win32 compatibility patch (kmx@cpan.org)
